--- a/index.html
+++ b/index.html
@@ -14,32 +14,35 @@
     <div class="container">
 
       <ul class ="navigation">
-        <li class="navigation"><a href="index.html">Calendar of Events</a></li>
-        <li class="navigation"><a href="food.html">Academic Resources</a></li>
-        <li class="navigation"><a href="entertainment.html">Clubs and Organizations</a></li>
-        <li class="navigation"><a href="entertainment.html">Health and Wellness</a></li>
+        <li class="navigation"><a class ="navigation" href="academics.html">Academic Resources</a></li>
+        <li class="navigation"><a class ="navigation" href="extracurriculars.html">Campus Life</a></li>
+        <li class="navigation"><a class ="navigation" href="career.html">Career Services</a></li>
+        <li class="navigation"><a class ="navigation" href="health.html">Health and Wellness</a></li>
         <ul style="float:right;list-style-type:none;">
-           <li class="navigation"><a href="#img1" rel="modal:open">Contact Us</a></li>
+           <li class="navigation"><a class ="navigation" href="#form" rel="modal:open">Contact Us</a></li>
          </ul>
       </ul>
 
       <section class="page-header">
 
-        <img src="http://placehold.it/750x350">
+        <img src="images/Brookings.jpg" alt="Brookings" style = "width: 1000px">
         <h1 class="project-name">Student Resources</h1>
         <h2 class="project-tagline">Your first stop for any academic or extracurricular-related questions.</h2>
-        <p> <i> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pretium nisi quis velit condimentum fermentum. Suspendisse ut cursus neque.
-          Mauris malesuada eu lorem ultrices suscipit. Fusce placerat rhoncus est et mollis. Aliquam bibendum ex mi, at hendrerit lacus vestibulum ut.
-          Duis aliquam et orci eu consectetur. Cras sed arcu nisl. Mauris tincidunt imperdiet magna, eu sagittis urna pretium sit amet.
-          Praesent volutpat euismod elit, at venenatis massa euismod sit amet. </i></p>
+        <p> <i> Welcome to Washington University in St. Louis! Whether you're a freshman beginning your four-year
+        journey here or a student studying abroad in St. Louis for the semester, we want you to feel at home.
+        We know that getting settled is a difficult process that can be overwhelming at times, so we've gathered
+        some of the best tips and resources to help you transition to WashU.
+      </i></p>
       </section>
 
-      <img src="http://placehold.it/350x200">
-      <p><b> Services </p></b>
+      <h2><b> Quick Links </p></h2>
 
+      <h3> Undergraduate Schools </h3>
       <ul>
-          <li>Service 1</li>
-          <li>Service 2</li>
+          <li><a href="http://artsci.wustl.edu/">Arts & Sciences</a></li>
+          <li><a href="http://www.olin.wustl.edu/EN-US/Pages/default.aspx">Olin Business School</a></li>
+          <li><a href="http://samfoxschool.wustl.edu/">Sam Fox School of Design & Visual Arts</a></li>
+          <li><a href="http://engineering.wustl.edu/Pages/home.aspx">School of Engineering and Applied Science</a></li>
       </ul>
 
       <footer class="site-footer">
