--- a/academics.html
+++ b/academics.html
@@ -65,9 +65,8 @@
   <h1> Transfer Students </h1>
     <p> If you're transfering to WashU after attending another university for some time, you probably already have some idea of what the college
       experience is like. However, every school is incredibly different and classes at WashU may be nothing like those at your previous school.
-      Like freshman, transfer students will take part in an orientation program during the first few days of the academic year. </p>
-
-      
+      Like freshman, transfer students will take part in an orientation program during the first few days of the academic year. Your academic
+      advisor will also reach out to you mid-summer with information regarding course registration. </p>
 
   <h1> Exchange Students </h1>
     <p> Whether you're only planning on studying at WashU for a semester or are staying for an entire year, your time in St. Louis is limited,
