--- a/extracurriculars.html
+++ b/extracurriculars.html
@@ -23,14 +23,25 @@
     </ul>
 
     <p> No matter what grade you're in or what your interests are, there is a wide variety of extracurricular
-      opportunities on campus for you. </p>
+      opportunities on campus for you. There are two great ways to learn more about what's going on on campus
+      and learn how to join.</p>
+
+      <ol>
+        <li><b> Visit the Activities Fair: </b> Once a semester, all of the clubs and organizations host an activities
+          fair during which students can visit tables and speak to representatives for each activity. This is an extremely
+          fun and easy way of not only finding out more about clubs you may have already wanted to join but also to discover
+          what other opportunities are out there that you may have never thought about before.</li>
+
+        <li><b> Explore Portfolio: </b> Portfolio is the university's main source of information on all of the clubs, activities,
+          and events going on on campus. By logging in with your university username and password, you will get immediate access
+          to a directory of all of these clubs and organizations, with links to their websites and information for who to contact
+          should you want to get involved. So when you have some extra time, go to https://portfolio.wustl.edu/ and see what new
+          things you may want to get involved in. </li>
 
     <p> For up-to-date information on WashU's athletic schedule and rankings, click <a href ="http://bearsports.wustl.edu/landing/index"> here! </a>
 
     <p> And if, at the end of the day, none of these activities seem right for you, you're welcome to start your
       own club or intramural team. </p>
-
-    <p> Never forget to
 
     </body>
   </html>
