--- a/health.html
+++ b/health.html
@@ -58,9 +58,22 @@
         the university has two gyms that are free for students to use. </p>
 
         <h2> The South Forty Fitness Center </h2>
-        <p style= "float: left"><img src="images/Treadmills.jpg" alt="South 40 Treadmills" style="width: 200px"></p>
+        <p> Any students living on the South 40 have free, daily access to the fitness center located about Bear's Den.
+          The facility contains a number of treadmills, ellipticals, cycles, and weights, so that students looking to
+          workout in between class or in the evening don't have to go far. The South 40's fitness center also offers a variety of
+          exercise classes during the week throughout the school year. For more information on the schedule of activities, click
+          <a href="http://s40fitness.wustl.edu/index.php?option=com_content&view=article&id=119&Itemid=119"> here! </a>
+
 
         <h2> The Athletics Complex </h2>
-        
+        <p> The AC contains a variety of facilities intended to accomodate a wide range of individual and group recreational
+          and intramural activities. It is also pen every day of the week and free to all full-time students. Whether you'd like to
+          hold practice for your intramural team or use the weight room in your spare room, the AC is the best place on campus to
+          fulfill your needs. The gym's regular hours are as follows: </p>
+
+          <p>Monday-Thursday: 7am-11pm </p>
+          <p>Friday: 7am-9pm </p>
+          <p>Saturday-Sunday: 9am-8pm</p>
+
     </body>
   </html>
