--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
           <li><a href="http://engineering.wustl.edu/Pages/home.aspx">School of Engineering and Applied Science</a></li>
       </ul>
 
+      <h3> Pages to Bookmark </h3>
+      <ul>
+        <li><a href="https://acadinfo.wustl.edu">WebSTAC</a></li>
+        <li><a href="https://bb.wustl.edu/">Blackboard</a></li>
+        <li><a href="http://email.wustl.edu/">Email</a></li>
+
       <footer class="site-footer">
         <hr>
         <p><b>Washington University in St. Louis</b></p>
