Fixed Contact Button

--- a/academics.html
+++ b/academics.html
@@ -11,6 +11,29 @@
   </head>
   <body>
 
+    <!-- Modals; Edit with care -->
+    <div id="form" style="display:none;">
+
+      <form action="//formspree.io/czc966@gmail.com" method="POST">
+        <div>
+          <label><b>Name</b></label>
+          <input type="text" name="name" value="your name">
+        </div>
+        <div>
+          <label><b>Email</b></label>
+          <input type="text" name="mail" value="your email">
+        </div>
+        <div>
+          <label><b>Comment</b></label>
+          <input type="text" name="comment" value="your comment" size="50">
+        </div>
+        <div>
+          <input type="submit" value="Send">
+        </div>
+      </form>
+
+    </div>
+
   <div class="container">
 
     <ul class ="navigation">
@@ -24,7 +47,7 @@
 
   <div class="page-header">
     <h1> Academic Resources </h1>
-    <img src="images/Books.jpg" alt="Books" style="width: 1000px"
+    <img src="images/Books.jpg" alt="Books" style="width: 1000px">
   </div>
 
   <h1> Freshman Students </h1>
@@ -57,9 +80,10 @@
         Whether you have a specific question that you'd like to ask or just want to see what other questions people are asking,
         these social media groups provide a wealth of information to you before getting to school. </p>
 
-        <p> Another great way of getting in touch with peers before the school year begins is by attending the new student events held in cities near you. Often times, families of current students
+      <li><p> Another great way of getting in touch with peers before the school year begins is by attending the new student events held in cities near you. Often times, families of current students
         will host dinners or information sessions in their home states that are available to all prospective students. So don't feel shy about
-        stopping by and hearing how others are handling the process. You'd be surprised by how many WashU students are also living in your area.
+        stopping by and hearing how others are handling the process. You'd be surprised by how many WashU students are also living in your area.</li>
+      </ol>
 
 
   <h1> Transfer Students </h1>
@@ -83,6 +107,15 @@
             two hours and gives students a chance to participate in free, informal English conversation practice. Also, the meetings are free and require
             no registration or RSVP, so it's definitely worth stopping by one day to see whether they may be helpful to you. </li>
 
+            <footer class="site-footer">
+              <hr>
+              <p><b>Washington University in St. Louis</b></p>
+              <p>One Brookings Drive, St. Louis, MO 63130</p>
+            </footer>
+
+            <!-- JavaScript; Do not edit below -->
+             <script src="js/jquery-1.12.0.min.js"></script>
+              <script src="js/jquery.modal.min.js"></script>
 
     </body>
   </html>
