--- a/extracurriculars.html
+++ b/extracurriculars.html
@@ -11,6 +11,29 @@
   </head>
   <body>
 
+    <!-- Modals; Edit with care -->
+    <div id="form" style="display:none;">
+
+      <form action="//formspree.io/czc966@gmail.com" method="POST">
+        <div>
+          <label><b>Name</b></label>
+          <input type="text" name="name" value="your name">
+        </div>
+        <div>
+          <label><b>Email</b></label>
+          <input type="text" name="mail" value="your email">
+        </div>
+        <div>
+          <label><b>Comment</b></label>
+          <input type="text" name="comment" value="your comment" size="50">
+        </div>
+        <div>
+          <input type="submit" value="Send">
+        </div>
+      </form>
+
+    </div>
+
   <div class="container">
 
     <ul class ="navigation">
@@ -22,9 +45,14 @@
        </ul>
     </ul>
 
+    <div class="page-header">
+      <h1> Campus Life </h1>
+      <img src="images/Basketball.jpg" alt="Basketball" style="width: 1035px">
+    </div>
+
     <p> No matter what grade you're in or what your interests are, there is a wide variety of extracurricular
       opportunities on campus for you. There are two great ways to learn more about what's going on on campus
-      and learn how to join.</p>
+      and how to join.</p>
 
       <ol>
         <li><b> Visit the Activities Fair: </b> Once a semester, all of the clubs and organizations host an activities
@@ -38,10 +66,28 @@
           should you want to get involved. So when you have some extra time, go to https://portfolio.wustl.edu/ and see what new
           things you may want to get involved in. </li>
 
-    <p> For up-to-date information on WashU's athletic schedule and rankings, click <a href ="http://bearsports.wustl.edu/landing/index"> here! </a>
+      </ol>
 
     <p> And if, at the end of the day, none of these activities seem right for you, you're welcome to start your
       own club or intramural team. </p>
+
+  <h2> Other Resources </h2>
+
+  <ul>
+    <li> For up-to-date information on WashU's athletic schedule and rankings, click <a href ="http://bearsports.wustl.edu/landing/index"> here! </a> </li>
+    <li> To learn more about upcoming events in the Visual and Performing Arts communities, click <a href ="https://wustl.edu/campus-experience/arts-culture/"> here. </a></li>
+  </ul>
+
+
+      <footer class="site-footer">
+        <hr>
+        <p><b>Washington University in St. Louis</b></p>
+        <p>One Brookings Drive, St. Louis, MO 63130</p>
+      </footer>
+
+      <!-- JavaScript; Do not edit below -->
+       <script src="js/jquery-1.12.0.min.js"></script>
+        <script src="js/jquery.modal.min.js"></script>
 
     </body>
   </html>
