--- a/health.html
+++ b/health.html
@@ -11,6 +11,29 @@
   </head>
   <body>
 
+    <!-- Modals; Edit with care -->
+    <div id="form" style="display:none;">
+
+      <form action="//formspree.io/czc966@gmail.com" method="POST">
+        <div>
+          <label><b>Name</b></label>
+          <input type="text" name="name" value="your name">
+        </div>
+        <div>
+          <label><b>Email</b></label>
+          <input type="text" name="mail" value="your email">
+        </div>
+        <div>
+          <label><b>Comment</b></label>
+          <input type="text" name="comment" value="your comment" size="50">
+        </div>
+        <div>
+          <input type="submit" value="Send">
+        </div>
+      </form>
+
+    </div>
+
   <div class="container">
 
     <ul class ="navigation">
@@ -74,6 +97,16 @@
           <p>Monday-Thursday: 7am-11pm </p>
           <p>Friday: 7am-9pm </p>
           <p>Saturday-Sunday: 9am-8pm</p>
+
+          <footer class="site-footer">
+            <hr>
+            <p><b>Washington University in St. Louis</b></p>
+            <p>One Brookings Drive, St. Louis, MO 63130</p>
+          </footer>
+
+          <!-- JavaScript; Do not edit below -->
+           <script src="js/jquery-1.12.0.min.js"></script>
+            <script src="js/jquery.modal.min.js"></script>
 
     </body>
   </html>
